package pt.ipp.isep.dei.esoft.project.ui.console;

public class PostponeAgendaEntryUI {
}
