@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

package "UI" <<Folder>> #DDDDDD {

class PostponeAgendaEntryUI {
}

}

package "Controller" <<Folder>> #DDDDDD {
class PostponeAgendaEntryController {
    + PostponeAgendaEntryController(entryList, agenda)
    + postponeAgendaEntry(entryList, newDate)
    + postponeAgendaEntry(agendaEntry)
    + getAgendaEntryList()
}

}

package "Domain" <<Folder>> #DDDDDD {

package "Repository" <<Folder>> #DDDDDD {

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAgenda()

}


class Agenda {
    + postponeAgendaEntry(entryList, newDate)
    + validateEntryPostpone(agendaEntry)
}

class EntryList{
    + getAgendaEntryList()
}

}

class Entry {
    - task : Task
    - greenSpace : GreenSpace
}

class AgendaEntry {
    -startDate : Date
    -endDate : Date
    -status : enum
    +createEntry(task, greenSpace, startDate, endDate) : AgendaEntry
    +validateEntry() : boolean
    +taskSchedule() : void
}

class GreenSpace {
    - name : String
    - area : double
    + GreenSpace(name, area)
}

class Task {
    - description : String
    - team : Team
    - vehicles : List<Vehicle>
    - duration : Date
    + Task(description, team, vehicles, duration)
}




package "Mapper" <<Folder>> #DDDDDD {
class EntryListMapper {
    +EntryListToDto(entries) : List<EntryListDto>
    +toDTO(entryList) : entryListDto
}

}

package "DTO" <<Folder>> #DDDDDD {
class EntryListDto{
}

}


PostponeAgendaEntryUI ..> PostponeAgendaEntryController

Repositories --> Repositories : instance
PostponeAgendaEntryController ..> Repositories : repositories
PostponeAgendaEntryController ..> EntryListMapper : entryListDto

Repositories -->"1" EntryList
PostponeAgendaEntryController ..> EntryList : listEntries
PostponeAgendaEntryController ..> EntryList : entryList


EntryListDto ..> EntryListMapper : entryListDto


Repositories --> "1" Agenda
PostponeAgendaEntryController ..> Agenda : agenda
Agenda --> AgendaEntry : has
GreenSpace --o AgendaEntry : has
Task --o AgendaEntry : has

Entry --|> AgendaEntry : extends

@enduml